# Rustviz

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MILESTONES.md  README.md
.specify/: integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
specs/001-milestone-roadmap/: data-model.md  plan.md  quickstart.md  research.md  scope-inventory.md  spec.md  tasks.md
specs/002-m01-frontend-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-m02-resolve-typeck/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-m03-event-eval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-m04-ui-shell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-m03-1-protocol-revision/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-live-l1-editing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-m03-2-scalar-lattice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-m06-borrows/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-m06-1-mutation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-m07-heap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: eval.rs  event.rs  lib.rs  parse.rs  pipeline.rs  resolve.rs  typeck.rs  ui.rs
tests/: m01.rs  m02.rs  m03.rs  m08_2.rs
web/: Trunk.toml  index.html  index.js  style.css
(+213 files in other folders)
