[package]
name = "rustviz"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Pedagogical visualizer for Rust ownership and borrowing"
license = "MIT OR Apache-2.0"

[dependencies]
indexmap = "2"

[dev-dependencies]
insta = "1"

[[test]]
name = "m01"
path = "tests/m01.rs"

[[test]]
name = "m02"
path = "tests/m02.rs"

[[test]]
name = "m03"
path = "tests/m03.rs"
